--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NOTION_TOKEN=your_notion_token
+NOTION_PAGE_ID=your_notion_page_id
+NOTION_USERNAME=your_notion_username
 NUBANK_CPF=your_cpf
 NUBANK_PASSWORD=your_password
 NUBANK_REFRESH_TOKEN=your_refresh_token
